pages/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

input {
  border: 1px solid black;
}
.relative {
  position: relative;
}
.absolute {
  position: absolute;
}
.gap-3 {
  gap: 0.75rem;
}
.image_animation {
  transform: none;
  transition-property: transform;
  transition-duration: 500ms;
}
.image_animation:hover {
  transform: scale(1.1);
}
.w-16 {
  width: 4rem;
}
.h-16 {
  height: 4rem;
}
.image_container {
  width: 58.333333%;
}
details_container {
  width: 41.666667%;
}
.items-end {
  align-items: flex-end;
}
.whitespace-nowrap {
  white-space: nowrap;
}
.text-ellipsis {
  text-overflow: ellipsis;
}
.overflow-hidden {
  overflow: hidden;
}
.w-40 {
  width: 10rem;
}
.bg-transparent {
  background-color: transparent;
}
.gap-1 {
  gap: 0.25rem;
}
.w-6 {
  width: 1.5rem;
}
.h-6 {
  height: 1.5rem;
}
.max-w-36 {
  max-width: 9rem;
}
.max-w-full {
  max-width: 100%;
}
.logo_design {
  font-size: 34px;
  color: #ef4444;
}
.w-5 {
  width: 1.25rem;
}
.h-5 {
  height: 1.25rem;
}
.text-yellow-400 {
  --tw-text-opacity: 1;
  color: rgb(250 204 21 / var(--tw-text-opacity));
}
.bg-gray-900 {
  --tw-bg-opacity: 1;
  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
}
.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}
.border-red-900 {
  --tw-border-opacity: 1;
  border-color: rgb(127 29 29 / var(--tw-border-opacity));
}
.text-gray-500 {
  --tw-text-opacity: 1;
  color: rgb(107 114 128 / var(--tw-text-opacity));
}
.w-20 {
  width: 5rem;
}
.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}
.py-4 {
  padding-top: 1rem;
  padding-bottom: 1rem;
}
.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}
.top-30 {
  top: 7rem;
}
.right-10 {
  right: 2.5rem;
}
.top-20 {
  top: 5rem;
}
.h-20 {
  height: 5rem;
}
.w-6 {
  width: 1.5rem;
}
.bg-gray-200 {
  --tw-bg-opacity: 1;
  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
}
.text-black {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
}
.search_by_title {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.nav_kabab_menu {
  padding: 0.25rem 0.5rem;
  --tw-bg-opacity: 1;
  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
  border-radius: 9999px;
  cursor: pointer;
}
.cursor-pointer {
  cursor: pointer;
}
.z-99999 {
  z-index: 999999;
}
.nav_kabab_menu_button {
  width: 1.5rem;
  height: 1.5rem;
}
.nav_bar_right_side {
  display: flex;
  align-items: center;
  justify-content: center;
}
.search_bar_container > li:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
}
.search_bar_container {
  --tw-text-opacity: 1;
  color: rgb(0 0 0 / var(--tw-text-opacity));
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}
.block {
  display: block;
}
.hidden {
  display: none;
}
.navbar_tabs > button:hover {
  text-decoration-line: underline;
}
.navbar_tabs {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.login_page_backDrop {
  background-image: url("../libs/images/nextflixBackgroundImage.jpg");
}

.translate-100 {
  transform: translateX(-55%);
}

.navbar {
  z-index: 99999999;
}

.search_menu {
  max-height: 300px;
  overflow-y: scroll;
}

.calc-100vh-minus-72px {
  height: calc(100% - 72px);
}

@keyframes bounce {
  0%,
  100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-1rem);
  }
}

.dot1 {
  animation: bounce 0.6s infinite alternate;
}

.dot2 {
  animation: bounce 0.6s infinite alternate 0.2s;
}

.dot3 {
  animation: bounce 0.6s infinite alternate 0.4s;
}
.youtube_container > div {
  height: 100%;
}

.carousel {
  overflow: hidden;
  position: relative;
}
.carousel-inner {
  display: flex;
  transition: transform 0.3s ease-in-out;
}
.carousel-item {
  min-width: 100%;
}

